feat: 重构商品 (products) 领域的 infrastructure 层中的仓储服务, 将复杂查询迁移到 SQL xml 中, 避免多次查询导致的性能问题
Signed-off-by: Eason <3220563569@qq.com>